src/interpreterParser.cpp

// Generated from interpreter.g4 by ANTLR 4.9.3


#include "interpreterVisitor.h"

#include "interpreterParser.h"


using namespace antlrcpp;
using namespace antlr4;

interpreterParser::interpreterParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

interpreterParser::~interpreterParser() {
  delete _interpreter;
}

std::string interpreterParser::getGrammarFileName() const {
  return "interpreter.g4";
}

const std::vector<std::string>& interpreterParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& interpreterParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

interpreterParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<interpreterParser::StatementContext *> interpreterParser::ProgContext::statement() {
  return getRuleContexts<interpreterParser::StatementContext>();
}

interpreterParser::StatementContext* interpreterParser::ProgContext::statement(size_t i) {
  return getRuleContext<interpreterParser::StatementContext>(i);
}


size_t interpreterParser::ProgContext::getRuleIndex() const {
  return interpreterParser::RuleProg;
}


antlrcpp::Any interpreterParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::ProgContext* interpreterParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, interpreterParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << interpreterParser::T__0)
      | (1ULL << interpreterParser::T__1)
      | (1ULL << interpreterParser::T__2)
      | (1ULL << interpreterParser::LBR)
      | (1ULL << interpreterParser::ID)
      | (1ULL << interpreterParser::INT))) != 0)) {
      setState(24);
      statement();
      setState(29);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

interpreterParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

interpreterParser::ExprStmtContext* interpreterParser::StatementContext::exprStmt() {
  return getRuleContext<interpreterParser::ExprStmtContext>(0);
}

interpreterParser::PrintStmtContext* interpreterParser::StatementContext::printStmt() {
  return getRuleContext<interpreterParser::PrintStmtContext>(0);
}

interpreterParser::AssignmentStmtContext* interpreterParser::StatementContext::assignmentStmt() {
  return getRuleContext<interpreterParser::AssignmentStmtContext>(0);
}

interpreterParser::FuncDefContext* interpreterParser::StatementContext::funcDef() {
  return getRuleContext<interpreterParser::FuncDefContext>(0);
}

interpreterParser::FuncCallContext* interpreterParser::StatementContext::funcCall() {
  return getRuleContext<interpreterParser::FuncCallContext>(0);
}

interpreterParser::ReturnStmtContext* interpreterParser::StatementContext::returnStmt() {
  return getRuleContext<interpreterParser::ReturnStmtContext>(0);
}


size_t interpreterParser::StatementContext::getRuleIndex() const {
  return interpreterParser::RuleStatement;
}


antlrcpp::Any interpreterParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::StatementContext* interpreterParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, interpreterParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(36);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(30);
      exprStmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(31);
      printStmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(32);
      assignmentStmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(33);
      funcDef();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(34);
      funcCall();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(35);
      returnStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprStmtContext ------------------------------------------------------------------

interpreterParser::ExprStmtContext::ExprStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

interpreterParser::ExprContext* interpreterParser::ExprStmtContext::expr() {
  return getRuleContext<interpreterParser::ExprContext>(0);
}


size_t interpreterParser::ExprStmtContext::getRuleIndex() const {
  return interpreterParser::RuleExprStmt;
}


antlrcpp::Any interpreterParser::ExprStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitExprStmt(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::ExprStmtContext* interpreterParser::exprStmt() {
  ExprStmtContext *_localctx = _tracker.createInstance<ExprStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, interpreterParser::RuleExprStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

interpreterParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

interpreterParser::ExprContext* interpreterParser::PrintStmtContext::expr() {
  return getRuleContext<interpreterParser::ExprContext>(0);
}


size_t interpreterParser::PrintStmtContext::getRuleIndex() const {
  return interpreterParser::RulePrintStmt;
}


antlrcpp::Any interpreterParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::PrintStmtContext* interpreterParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, interpreterParser::RulePrintStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(interpreterParser::T__0);
    setState(41);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStmtContext ------------------------------------------------------------------

interpreterParser::AssignmentStmtContext::AssignmentStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<interpreterParser::ExprContext *> interpreterParser::AssignmentStmtContext::expr() {
  return getRuleContexts<interpreterParser::ExprContext>();
}

interpreterParser::ExprContext* interpreterParser::AssignmentStmtContext::expr(size_t i) {
  return getRuleContext<interpreterParser::ExprContext>(i);
}

tree::TerminalNode* interpreterParser::AssignmentStmtContext::EQU() {
  return getToken(interpreterParser::EQU, 0);
}


size_t interpreterParser::AssignmentStmtContext::getRuleIndex() const {
  return interpreterParser::RuleAssignmentStmt;
}


antlrcpp::Any interpreterParser::AssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::AssignmentStmtContext* interpreterParser::assignmentStmt() {
  AssignmentStmtContext *_localctx = _tracker.createInstance<AssignmentStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, interpreterParser::RuleAssignmentStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    expr(0);
    setState(44);
    antlrcpp::downCast<AssignmentStmtContext *>(_localctx)->op = match(interpreterParser::EQU);
    setState(45);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

interpreterParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* interpreterParser::FuncDefContext::ID() {
  return getToken(interpreterParser::ID, 0);
}

tree::TerminalNode* interpreterParser::FuncDefContext::LBR() {
  return getToken(interpreterParser::LBR, 0);
}

tree::TerminalNode* interpreterParser::FuncDefContext::RBR() {
  return getToken(interpreterParser::RBR, 0);
}

tree::TerminalNode* interpreterParser::FuncDefContext::COLON() {
  return getToken(interpreterParser::COLON, 0);
}

interpreterParser::ParamListContext* interpreterParser::FuncDefContext::paramList() {
  return getRuleContext<interpreterParser::ParamListContext>(0);
}

std::vector<interpreterParser::SuiteContext *> interpreterParser::FuncDefContext::suite() {
  return getRuleContexts<interpreterParser::SuiteContext>();
}

interpreterParser::SuiteContext* interpreterParser::FuncDefContext::suite(size_t i) {
  return getRuleContext<interpreterParser::SuiteContext>(i);
}


size_t interpreterParser::FuncDefContext::getRuleIndex() const {
  return interpreterParser::RuleFuncDef;
}


antlrcpp::Any interpreterParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::FuncDefContext* interpreterParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 10, interpreterParser::RuleFuncDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(interpreterParser::T__1);
    setState(48);
    match(interpreterParser::ID);
    setState(49);
    match(interpreterParser::LBR);
    setState(51);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == interpreterParser::ID) {
      setState(50);
      paramList();
    }
    setState(53);
    match(interpreterParser::RBR);
    setState(54);
    match(interpreterParser::COLON);
    setState(58);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(55);
        suite(); 
      }
      setState(60);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

interpreterParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> interpreterParser::ParamListContext::ID() {
  return getTokens(interpreterParser::ID);
}

tree::TerminalNode* interpreterParser::ParamListContext::ID(size_t i) {
  return getToken(interpreterParser::ID, i);
}

std::vector<tree::TerminalNode *> interpreterParser::ParamListContext::COMMA() {
  return getTokens(interpreterParser::COMMA);
}

tree::TerminalNode* interpreterParser::ParamListContext::COMMA(size_t i) {
  return getToken(interpreterParser::COMMA, i);
}


size_t interpreterParser::ParamListContext::getRuleIndex() const {
  return interpreterParser::RuleParamList;
}


antlrcpp::Any interpreterParser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::ParamListContext* interpreterParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 12, interpreterParser::RuleParamList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(interpreterParser::ID);
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == interpreterParser::COMMA) {
      setState(62);
      match(interpreterParser::COMMA);
      setState(63);
      match(interpreterParser::ID);
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SuiteContext ------------------------------------------------------------------

interpreterParser::SuiteContext::SuiteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

interpreterParser::StatementContext* interpreterParser::SuiteContext::statement() {
  return getRuleContext<interpreterParser::StatementContext>(0);
}


size_t interpreterParser::SuiteContext::getRuleIndex() const {
  return interpreterParser::RuleSuite;
}


antlrcpp::Any interpreterParser::SuiteContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitSuite(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::SuiteContext* interpreterParser::suite() {
  SuiteContext *_localctx = _tracker.createInstance<SuiteContext>(_ctx, getState());
  enterRule(_localctx, 14, interpreterParser::RuleSuite);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncCallContext ------------------------------------------------------------------

interpreterParser::FuncCallContext::FuncCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* interpreterParser::FuncCallContext::ID() {
  return getToken(interpreterParser::ID, 0);
}

tree::TerminalNode* interpreterParser::FuncCallContext::LBR() {
  return getToken(interpreterParser::LBR, 0);
}

tree::TerminalNode* interpreterParser::FuncCallContext::RBR() {
  return getToken(interpreterParser::RBR, 0);
}

interpreterParser::ArgListContext* interpreterParser::FuncCallContext::argList() {
  return getRuleContext<interpreterParser::ArgListContext>(0);
}


size_t interpreterParser::FuncCallContext::getRuleIndex() const {
  return interpreterParser::RuleFuncCall;
}


antlrcpp::Any interpreterParser::FuncCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitFuncCall(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::FuncCallContext* interpreterParser::funcCall() {
  FuncCallContext *_localctx = _tracker.createInstance<FuncCallContext>(_ctx, getState());
  enterRule(_localctx, 16, interpreterParser::RuleFuncCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(interpreterParser::ID);
    setState(72);
    match(interpreterParser::LBR);
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << interpreterParser::LBR)
      | (1ULL << interpreterParser::ID)
      | (1ULL << interpreterParser::INT))) != 0)) {
      setState(73);
      argList();
    }
    setState(76);
    match(interpreterParser::RBR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgListContext ------------------------------------------------------------------

interpreterParser::ArgListContext::ArgListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<interpreterParser::ExprContext *> interpreterParser::ArgListContext::expr() {
  return getRuleContexts<interpreterParser::ExprContext>();
}

interpreterParser::ExprContext* interpreterParser::ArgListContext::expr(size_t i) {
  return getRuleContext<interpreterParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> interpreterParser::ArgListContext::COMMA() {
  return getTokens(interpreterParser::COMMA);
}

tree::TerminalNode* interpreterParser::ArgListContext::COMMA(size_t i) {
  return getToken(interpreterParser::COMMA, i);
}


size_t interpreterParser::ArgListContext::getRuleIndex() const {
  return interpreterParser::RuleArgList;
}


antlrcpp::Any interpreterParser::ArgListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitArgList(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::ArgListContext* interpreterParser::argList() {
  ArgListContext *_localctx = _tracker.createInstance<ArgListContext>(_ctx, getState());
  enterRule(_localctx, 18, interpreterParser::RuleArgList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    expr(0);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == interpreterParser::COMMA) {
      setState(79);
      match(interpreterParser::COMMA);
      setState(80);
      expr(0);
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

interpreterParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

interpreterParser::ExprContext* interpreterParser::ReturnStmtContext::expr() {
  return getRuleContext<interpreterParser::ExprContext>(0);
}


size_t interpreterParser::ReturnStmtContext::getRuleIndex() const {
  return interpreterParser::RuleReturnStmt;
}


antlrcpp::Any interpreterParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::ReturnStmtContext* interpreterParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, interpreterParser::RuleReturnStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(interpreterParser::T__2);
    setState(87);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

interpreterParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t interpreterParser::ExprContext::getRuleIndex() const {
  return interpreterParser::RuleExpr;
}

void interpreterParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParensContext ------------------------------------------------------------------

tree::TerminalNode* interpreterParser::ParensContext::LBR() {
  return getToken(interpreterParser::LBR, 0);
}

interpreterParser::ExprContext* interpreterParser::ParensContext::expr() {
  return getRuleContext<interpreterParser::ExprContext>(0);
}

tree::TerminalNode* interpreterParser::ParensContext::RBR() {
  return getToken(interpreterParser::RBR, 0);
}

interpreterParser::ParensContext::ParensContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::ParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitParens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncContext ------------------------------------------------------------------

interpreterParser::FuncCallContext* interpreterParser::FuncContext::funcCall() {
  return getRuleContext<interpreterParser::FuncCallContext>(0);
}

interpreterParser::FuncContext::FuncContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumContext ------------------------------------------------------------------

tree::TerminalNode* interpreterParser::NumContext::INT() {
  return getToken(interpreterParser::INT, 0);
}

interpreterParser::NumContext::NumContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::NumContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitNum(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PowContext ------------------------------------------------------------------

std::vector<interpreterParser::ExprContext *> interpreterParser::PowContext::expr() {
  return getRuleContexts<interpreterParser::ExprContext>();
}

interpreterParser::ExprContext* interpreterParser::PowContext::expr(size_t i) {
  return getRuleContext<interpreterParser::ExprContext>(i);
}

tree::TerminalNode* interpreterParser::PowContext::POW() {
  return getToken(interpreterParser::POW, 0);
}

interpreterParser::PowContext::PowContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::PowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitPow(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddSubContext ------------------------------------------------------------------

std::vector<interpreterParser::ExprContext *> interpreterParser::AddSubContext::expr() {
  return getRuleContexts<interpreterParser::ExprContext>();
}

interpreterParser::ExprContext* interpreterParser::AddSubContext::expr(size_t i) {
  return getRuleContext<interpreterParser::ExprContext>(i);
}

tree::TerminalNode* interpreterParser::AddSubContext::ADD() {
  return getToken(interpreterParser::ADD, 0);
}

tree::TerminalNode* interpreterParser::AddSubContext::SUB() {
  return getToken(interpreterParser::SUB, 0);
}

interpreterParser::AddSubContext::AddSubContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::AddSubContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitAddSub(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdContext ------------------------------------------------------------------

tree::TerminalNode* interpreterParser::IdContext::ID() {
  return getToken(interpreterParser::ID, 0);
}

interpreterParser::IdContext::IdContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::IdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitId(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivContext ------------------------------------------------------------------

std::vector<interpreterParser::ExprContext *> interpreterParser::MulDivContext::expr() {
  return getRuleContexts<interpreterParser::ExprContext>();
}

interpreterParser::ExprContext* interpreterParser::MulDivContext::expr(size_t i) {
  return getRuleContext<interpreterParser::ExprContext>(i);
}

tree::TerminalNode* interpreterParser::MulDivContext::MUL() {
  return getToken(interpreterParser::MUL, 0);
}

tree::TerminalNode* interpreterParser::MulDivContext::DIV() {
  return getToken(interpreterParser::DIV, 0);
}

interpreterParser::MulDivContext::MulDivContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any interpreterParser::MulDivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<interpreterVisitor*>(visitor))
    return parserVisitor->visitMulDiv(this);
  else
    return visitor->visitChildren(this);
}

interpreterParser::ExprContext* interpreterParser::expr() {
   return expr(0);
}

interpreterParser::ExprContext* interpreterParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  interpreterParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  interpreterParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 22;
  enterRecursionRule(_localctx, 22, interpreterParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(97);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<NumContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(90);
      match(interpreterParser::INT);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<IdContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(91);
      match(interpreterParser::ID);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<ParensContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(92);
      match(interpreterParser::LBR);
      setState(93);
      expr(0);
      setState(94);
      match(interpreterParser::RBR);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<FuncContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(96);
      funcCall();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(110);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(108);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<PowContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(99);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(100);
          antlrcpp::downCast<PowContext *>(_localctx)->op = match(interpreterParser::POW);
          setState(101);
          expr(7);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<MulDivContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(102);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(103);
          antlrcpp::downCast<MulDivContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == interpreterParser::MUL
